force-app/main/default/objects/Account/fields/asdsad__c.field-meta.xml
<CustomField>
    <fullName>asdsad__c</fullName>
    <label>asdsad</label>
    <length>12</length>
    <type>Text</type>
</CustomField>