force-app/main/default/objects/Account/fields/FieldDemo__c.field-meta.xml
<CustomField>
    <fullName>FieldDemo__c</fullName>
    <label>FieldDemo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>