force-app/main/default/objects/Account/fields/TESTE__c.field-meta.xml
<CustomField>
    <fullName>TESTE__c</fullName>
    <label>TESTE</label>
    <length>12</length>
    <type>Text</type>
</CustomField>